--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
 		"description":""
 	}'>
 	<block name="header">
-		<include src="@components/layout/header/header.html" locals='{"active":"Home"}'></include>
+		<include src="@components/layout/header/header.html" locals='{
+			"active":"Home",
+			"home":"true"
+		}'></include>
 	</block>
 	<block name="main">
 		<include src="@components/pages/home/home.html" locals='{}'></include>
