--- a/src/_components.html
+++ b/src/_components.html
@@ -22,13 +22,10 @@
 <body>
 	<div class="components">
 		<div class="components__item">
-			<a href="#" data-fls-button class="button">Button</a>
-			<a href="#" data-fls-button class="button button--lite">Button</a>
-			<a href="#" data-fls-button class="button button--icon --icon-arrow-ru">Button</a>
-
-			<a href="#" data-fls-button class="button button--text --icon-arrow-ru">Button Text</a>
-			<a href="#" data-fls-button class="button button--text button--text-big --icon-arrow-d">Button Text</a>
-			<a href="#" data-fls-button class="button button--text button--text-big button--text-rev --icon-arrow">To Top</a>
+			<include src="@components/forms/button/button.html"></include>
+		</div>
+		<div class="components__item">
+			<include src="@components/custom/blockhead/blockhead.html"></include>
 		</div>
 	</div>
 </body>
